# CameraToJNIBasic

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: camera.cpp  native-lib.cpp
app/src/main/cpp/include/: camera.hpp
app/src/main/java/com/upwork/jaycee/cameratojnibasic/: AutofitTexture.java  JNIWrapper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
